src/snapshots/brooks_cli__test__cli_tests__analyze_test_errors-2.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - analyze
    - "--path"
    - tests/analysis_error2.mel
---
success: true
exit_code: 0
----- stdout -----
[4mError:[0m Bool is not one of the expected types (Integer):
	...+ ([4;31mfalse[0m) +...
	at "tests/analysis_error2.mel":5,10

----- stderr -----
