src/snapshots/brooks_cli__test__cli_tests__analyze_test_errors-3.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - analyze
    - "--path"
    - tests/analysis_error3.mel
---
success: true
exit_code: 0
----- stdout -----
Could not analyze:
[4;31mfalse[0m + ...
at "tests/analysis_error3.mel":0,5
Bool is not one of the expected types (Integer)

----- stderr -----
