src/snapshots/brooks_cli__test__cli_tests__bad_path_test.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - proxy
    - "--port"
    - "8080"
    - "--path"
    - "./not-found/"
---
success: true
exit_code: 0
----- stdout -----
Error: Configuration error: Could not open connection to HMD server over UNIX domain socket at path ./not-found/
Usage: [BROOKS_CLI] [OPTIONS] <COMMAND>

Commands:
  compile      
  analyze      
  interpret    
  explorer     
  proxy        
  hmds-server  
  help         Print this message or the help of the given subcommand(s)

Options:
      --debug...             
      --log-file <LOG_FILE>  
  -h, --help                 Print help


----- stderr -----
