src/snapshots/brooks_cli__test__cli_tests__compile_test_errors-2.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - analyze
    - "--path"
    - tests/compile_error2.mel
---
success: true
exit_code: 0
----- stdout -----
[4mError:[0m Unexpected token j:
	...ng/[4;31mj[0m
	at "tests/compile_error2.mel":9,10

----- stderr -----
