src/snapshots/brooks_cli__test__cli_tests__help_test.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: [BROOKS_CLI] [OPTIONS] <COMMAND>

Commands:
  compile      
  analyze      
  interpret    
  explorer     
  proxy        
  hmds-server  
  help         Print this message or the help of the given subcommand(s)

Options:
      --debug...             
      --log-file <LOG_FILE>  
  -h, --help                 Print help

----- stderr -----
