src/snapshots/brooks_cli__test__cli_tests__interp_test_boolean_builtin.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - interpret
    - "--path"
    - tests/boolean.mel
---
success: true
exit_code: 0
----- stdout -----
false
[4mLogs:[0m
[33mTrace[0m: [4m0 to 10[0m: Evaluating function call expression
[33mTrace[0m: [4m0 to 7[0m: Evaluating identifier expression
[33mTrace[0m: [4m7 to 10[0m: Evaluating argument list expression
[33mTrace[0m: [4m8 to 9[0m: Evaluating argument list expression
[33mTrace[0m: [4m8 to 9[0m: Evaluating literal expression


----- stderr -----
