src/snapshots/brooks_cli__test__cli_tests__interp_test_path_element.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - interpret
    - "--path"
    - tests/path_element.mel
---
success: true
exit_code: 0
----- stdout -----
"to"
[4mLogs:[0m
[33mTrace[0m: [4m0 to 36[0m: Evaluating function call expression
[33mTrace[0m: [4m0 to 12[0m: Evaluating identifier expression
[33mTrace[0m: [4m12 to 36[0m: Evaluating argument list expression
[33mTrace[0m: [4m13 to 32[0m: Evaluating argument list expression
[33mTrace[0m: [4m13 to 32[0m: Evaluating literal expression
[33mTrace[0m: [4m34 to 35[0m: Evaluating argument list expression
[33mTrace[0m: [4m34 to 35[0m: Evaluating literal expression


----- stderr -----
