src/snapshots/brooks_cli__test__cli_tests__interp_test_path_element_name.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - interpret
    - "--path"
    - tests/function_name.mel
---
success: true
exit_code: 0
----- stdout -----
Function: path_element
[4mLogs:[0m
[33mTrace[0m: [4m0 to 12[0m: Evaluating identifier expression


----- stderr -----
